test/inference/good/coreml_lambda.mlt
let id = fun x -> 42