test/inference/bad/coreml_lambda.mlt
let id = 0 (fun x -> 42)